[package]
name = "iz-cpm"
version = "1.1.0"
authors = ["Ivan Izaguirre <ivanizag@gmail.com>"]
edition = "2018"

[[bin]]
name = "iz-cpm"
path = "src/main.rs"

[dependencies]
iz80 = "^0.3.2"
#iz80 = {path = "../iz80"}
clap = "^2"

[target.'cfg(windows)'.dependencies]
crossterm = "^0.17"

[target.'cfg(unix)'.dependencies]
termios = "^0.3"
