[package]
name = "izcpm"
version = "1.3.2"
authors = ["Ivan Izaguirre <ivanizag@gmail.com>"]
edition = "2021"

[[bin]]
name = "iz-cpm"
path = "src/bin/main.rs"

[dependencies]
iz80 = "^0.3.5"
#iz80 = {path = "../iz80"}
clap = "^2"

[target.'cfg(windows)'.dependencies]
crossterm = "^0.24"

[target.'cfg(unix)'.dependencies]
termios = "^0.3"
